# pyisolate

./: .coderabbit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_COMFYUI.md  benchmark_results_llamatron_20251114_001219.txt  pyproject.toml  run_benchmarks_linux.sh  run_benchmarks_windows.bat  run_benchmarks_windows.ps1
.github/workflows/: build-wheels.yml  ci.yml  pytorch.yml  windows.yml
benchmarks/: benchmark.py  benchmark_harness.py  memory_benchmark.py  simple_benchmark.py
comfy_hello_world/: extension.py  main.py
comfy_hello_world/custom_nodes/simple_text_node/: __init__.py  pyisolate.yaml  shared_services.py
comfy_hello_world/node-venvs/simple_text_node/: pyvenv.cfg
comfy_tools/: extract_routes.py
docs/: conf.py  debugging.md  edge_cases.md  index.rst  platform_compatibility.md  rpc_protocol.md
pyisolate/: __init__.py  config.py  host.py  interfaces.py  path_helpers.py  shared.py
pyisolate/_internal/: adapter_registry.py  bootstrap.py  client.py  environment.py  host.py  loader.py  model_serialization.py  remote_handle.py  rpc_protocol.py  rpc_serialization.py  rpc_transports.py  sandbox.py  sandbox_detect.py  serialization_registry.py  shared.py  singleton_context.py  socket_utils.py  tensor_serializer.py  torch_gate.py  torch_utils.py  uds_client.py
tests/: conftest.py  test_adapter_contract.py  test_bootstrap.py  test_bootstrap_additional.py  test_bwrap_command.py  test_client_entrypoint_extra.py  test_client_snapshot.py  test_config_validation.py  test_extension_lifecycle.py  test_extension_safety.py  test_fail_loud.py  test_host_additional.py  test_host_integration.py  test_host_internal_ext.py  test_host_public.py  test_host_unit.py  test_integration.py  test_loader.py  test_loader_additional.py  test_memory_leaks.py  test_path_helpers.py  test_path_helpers_contract.py  test_remaining_coverage.py  test_remote_handle.py  test_rpc_contract.py  test_rpc_message_format.py  test_rpc_shutdown.py  test_sandbox_detect.py  test_security.py  test_serialization_contract.py  test_serialization_registry.py  test_shared_additional.py  test_singleton_lifecycle.py  test_singleton_shared.py  test_torch_optional_contract.py  test_torch_utils_additional.py
tests/fixtures/: __init__.py  test_adapter.py
tests/harness/: host.py
tests/harness/test_package/: __init__.py  manifest.yaml
tests/integration/: __init__.py  test_edge_cases.py  test_integration.py  test_normalization_integration.py  test_rpc_basics.py  test_torch_tensor_integration.py
tests/integration_v2/: conftest.py  debug_rpc.py  test_isolation.py  test_lifecycle.py  test_tensors.py
tests/original_integration/: test_benchmarks.py
tests/path_unification/: __init__.py  test_path_helpers.py
